@@ -1,5 +1,8 @@
 Revision history for JSON-MaybeXS
 
+ - added an INSTALLATION section to documentation, to clarify the use of
+   dynamic prerequisites in Makefile.PL
+
 1.003007 - 2016-09-11
  - no changes since 1.003006_001
 
